fix scrollbar color )

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@
     @apply bg-yellow-200;
   }
   html ::-webkit-scrollbar {
-    @apply bg-gray-400 w-1 h-1;
+    @apply bg-white w-1 h-1;
   }
   html ::-webkit-scrollbar-thumb {
-    @apply rounded-sm bg-yellow-200;
+    @apply rounded-sm bg-blue
   }
   .article-cats {
     @apply before:absolute hover:before:-inset-4 hover:before:p-4 before:hover:shadow-cat before:transition-all
